Switch to micromixins